@@ -15,6 +15,8 @@ ufw [\fB\-\-dry\-run\fR] \fBdefault\fR allow|deny|reject [incoming|outgoing]
 .TP
 ufw [\fB\-\-dry\-run\fR] \fBlogging\fR on|off|LEVEL
 .TP
+ufw [\fB\-\-dry\-run\fR] \fBreset\fR
+.TP
 ufw [\fB\-\-dry\-run\fR] \fBstatus\fR [verbose|numbered]
 .TP
 ufw [\fB\-\-dry\-run\fR] \fBshow\fR [raw]
@@ -55,6 +57,9 @@ more on \fBdeny\fR and \fBreject\fR.
 toggle logging. Logged packets use the LOG_KERN syslog facility. Specifying a
 LEVEL turns logging on for the specified LEVEL. The default log level is 'low'.
 See \fBLOGGING\fR for details.
+.TP
+\fBreset\fR
+Disables and resets firewall to installation defaults
 .TP
 \fBstatus\fR
 show status of firewall and ufw managed rules. Use \fBstatus verbose\fR for
