@@ -1,6 +1,7 @@
 ufw (0.30-1) UNRELEASED; urgency=low
 
-  * new upstream release
+  * new upstream release. Fixes:
+    LP: #436608
   * debian/control: drop versioned depends on iptables. This helps with
     backporting now that the test suite can handle it
   * debian/rules: pass interpreter to run_tests.sh
